--- a/exp-distrib-simulation.Rmd
+++ b/exp-distrib-simulation.Rmd
@@ -11,7 +11,7 @@ output:
     df_print: paged
   pdf_document:
     toc: yes
-    df_print: kable
+    df_print: paged
     number_sections: false
     fig_caption: yes
     highlight: tango
@@ -36,25 +36,14 @@ distribution of calculated means of samples from the exponential distribution.
 
 ## Simulations
 
-*Pending*
+Perform 1000 simulations, each with 40 samples of an exponential distribution.
+The 40 samples will be used to calculate the arithmetic mean and variance and
+then compared to the theoretical estimates.
 
-Perform 1000 simulations on 40 samples which are exponentially distributed
-with `lambda = 0.2`, then take the mean of each simulation.
-
-In this project, investigate the exponential distribution in R and compare it
-with the Central Limit Theorem (CLM). The exponential distribution will be
-simulated in R with `rexp(n, lambda)` where lambda is the rate parameter.
-
-The mean of the exponential distribution is `1/lambda` and the standard
-deviation is also `1/lambda`. Lambda will be set to `lambda = 0.2` for all of
-the simulations. An investigation will be performed on the distribution via
-simulation of averages of 40 exponentials for one thousand simulations.
-
-
-
-
-
-
+To make the data reproducible, a seed will be set. Also, set the control 
+parameters $\lambda = 0.2$ (the rate) and $n = 40$ (number of samples). A histogram
+will be provided to show the averages of the 40 exponentials over 1000
+simulations.
 
 ```{r exp-simulation, echo = TRUE}
 # load libraries
@@ -64,7 +53,7 @@ if (!require(ggplot2)) {
 }
 
 # set seed for reproducability
-set.seed(006867)
+set.seed(006766)
 
 # set sampling values:
 lambda <- 0.2             # rate parameter
@@ -72,20 +61,39 @@ n <- 40                   # number of samples (exponentials) in each simulation
 numSimulations <- 1000    # number of simulations
 
 # simulate the population
-simMeans <- data.frame(mValue = sapply(1 : numSimulations, function(x) {mean(rexp(n, lambda))}))
+simMeans <- data.frame(expMeans = sapply(1 : numSimulations, function(x) {mean(rexp(n, lambda))}))
 
 # plot the distribution
-expSimulationMeansChart <- ggplot(simMeans, aes(x = mValue)) +
+expSimulationMeansChart <- ggplot(simMeans, aes(x = expMeans)) +
                                   geom_histogram(binwidth = 0.15, color = "white", fill = rgb(0.2,0.7,0.1,0.4))  +
                                   xlab("Mean") +
                                   ylab("Frequency") +
                                   theme(plot.title = element_text(size = 14, hjust = 0.5)) +
                                   ggtitle("Histogram of Exponential Simulation Means")
 print(expSimulationMeansChart)
-
 ```
 
 ## Sample Mean vs Theoretical Mean
+
+*Pending*
+
+The mean of the exponential distribution is `1/lambda` and the standard
+deviation is also `1/lambda`.
+
+
+
+Perform 1000 simulations on 40 samples which are exponentially distributed
+with `lambda = 0.2`, then take the mean of each simulation.
+
+In this project, investigate the exponential distribution in R and compare it
+with the Central Limit Theorem (CLM). The exponential distribution will be
+simulated in R with `rexp(n, lambda)` where lambda is the rate parameter.
+
+Lambda will be set to `lambda = 0.2` for all of
+the simulations. An investigation will be performed on the distribution via
+simulation of averages of 40 exponentials for one thousand simulations.
+
+
 
 sampleMean <- mean(simMeans$mValue)
 theoMean <- 1/lambda
