--- a/exp-distrib-simulation.Rmd
+++ b/exp-distrib-simulation.Rmd
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(echo = TRUE, fig.path='figures/')
 
 The Central Limit Theorem states that if you have a population with mean $\mu$
 and standard deviation $\sigma$ and take sufficiently large random samples from
-the population (generally sample sizes over 30), then the distribution of the
+the population (generally sample sizes greater than 30), then the distribution of the
 sample means will be approximately normally distributed about the population
 mean $\mu$ - no matter the shape of the population distribution.
 
@@ -61,10 +61,10 @@ n <- 40                   # number of samples (exponentials) in each simulation
 numSimulations <- 1000    # number of simulations
 
 # simulate the population
-simMeans <- data.frame(expMeans = sapply(1 : numSimulations, function(x) {mean(rexp(n, lambda))}))
+simMeans <- data.frame(expMean = sapply(1 : numSimulations, function(x) {mean(rexp(n, lambda))}))
 
 # plot the distribution
-expSimulationMeansChart <- ggplot(simMeans, aes(x = expMeans)) +
+expSimulationMeansChart <- ggplot(simMeans, aes(x = expMean, y = ..count..)) +
                                   geom_histogram(binwidth = 0.15, color = "white", fill = rgb(0.2,0.7,0.1,0.4))  +
                                   xlab("Mean") +
                                   ylab("Frequency") +
@@ -73,7 +73,7 @@ expSimulationMeansChart <- ggplot(simMeans, aes(x = expMeans)) +
 print(expSimulationMeansChart)
 ```
 
-## Sample Mean vs Theoretical Mean
+## Sample Mean versus Theoretical Mean
 
 *Pending*
 
@@ -100,7 +100,7 @@ theoMean <- 1/lambda
 print(sampleMean)
 print(theoMean)
 
-## Sample Variance vs Theoretical Variance
+## Sample Variance versus Theoretical Variance
 
 
 
