--- a/tooth-growth-analysis.Rmd
+++ b/tooth-growth-analysis.Rmd
@@ -27,17 +27,17 @@ This analysis will compare the effects of different doses of vitamin C using
 two delivery methods to study the tooth growth in guinea pigs. The sample
 will consist of 60 guinea pigs. Each guinea pig will receive one of three dose
 levels of vitamin C (0.5, 1, and 2 mg/day) by one of two delivery methods,
-orange juice or ascorbic acid.
+orange juice or ascorbic acid supplements.
 
 The study will be performed using the ToothGrowth dataset which is included in
 the R `datasets` package. The dataset is a data frame that contains 60
 observations and 3 variables:
 
 * len - A numeric vector indicating the measurement of tooth length after
-        Vitamin C delivery
-* supp - A factor vector describing the delivery method (supplement type) used.
-         Either Orange Juice (OJ) or Ascorbic Acid (VC)
-* dose - A numeric vector indicating the dosage level in milligrams
+        vitamin C delivery
+* supp - A factor vector describing the delivery method used: Orange Juice (OJ)
+         or Ascorbic Acid (VC)
+* dose - A numeric vector indicating the dosage level in milligrams per day
          (0.5, 1, or 2mg)
 
 Further information on the ToothGrowth dataset can be found in the R
@@ -77,10 +77,10 @@ After loading the ToothGrowth dataset, provide a basic summary of the data.
 str(ToothGrowth)
 summary(ToothGrowth)
 
-# tabulate supplement type and dosage level values
-table(ToothGrowth$dose, ToothGrowth$supp)
+# tabulate delivery method and dosage level values
+table(ToothGrowth$supp, ToothGrowth$dose)
 
-# summary of tooth length data grouped by supplement type and dosage level
+# summary of tooth length data grouped by delivery method and dosage level
 by(data = ToothGrowth$len, INDICES = list(ToothGrowth$supp, ToothGrowth$dose), summary)
 ```
 
@@ -89,29 +89,29 @@ by(data = ToothGrowth$len, INDICES = list(ToothGrowth$supp, ToothGrowth$dose), s
 Perform some basic exploratory data analyses of the data. The analyses will
 explore the following relations:
 
-1. Tooth Length (len) as a function of Supplement Type (supp)
+1. Tooth Length (len) as a function of Delivery Method (supp)
 1. Tooth Length (len) as a function of Dosage Level (dose)
-1. Tooth Length (len) as a function of Supplement Type (supp) and Dosage Level (dose)
+1. Tooth Length (len) as a function of Delivery Method (supp) and Dosage Level (dose)
 
-### Tooth Length to Supplement Type
+### Tooth Length to Delivery Method
 
-```{r tooth-length-relative-to-supplement-type, echo = TRUE}
+```{r tooth-length-relative-to-delivery-method, echo = TRUE}
 tg <- ToothGrowth
 levels(tg$supp) <- c("Orange Juice", "Ascorbic Acid")
 gLenSupp <- ggplot(data = tg, aes(x = supp, y = len)) + 
     geom_boxplot(aes(fill = supp)) +
-    xlab("Supplement Type") +
+    xlab("Delivery Method") +
     ylab("Tooth Length") +
     theme(plot.title = element_text(size = 14, hjust = 0.5)) +
-    ggtitle("Tooth Length as a Function of Supplement Type")
+    ggtitle("Tooth Length as a Function of Delivery Method")
 print(gLenSupp)
 ```
 
 **Observation**
 
-The above chart shows that using Orange Juice (OC) as the delivery method,
+The above chart shows that using orange juice as the delivery method,
 independent of dosage level, had a more favorable effect on tooth growth than
-Ascorbic Acid (VC) .
+ascorbic acid.
 
 ### Tooth Length to Dosage Level
 
@@ -130,18 +130,18 @@ print(gLenDose)
 
 The above chart shows a positive relationship that higher dosage levels of
 vitamin C, independent of delivery method, had a more favorable effect on tooth
-growth than lower dosages of vitamin C. The 2.0 mg/day dosage level had the
-best effect on tooth growth followed by 1.0 mg/day and then 0.5 mg/day.
+growth than lower dosages of vitamin C. The 2 mg/day dosage level had the
+best effect on tooth growth followed by 1 mg/day and then 0.5 mg/day.
 
-### Tooth Length to Supplement Type and Dosage Level
+### Tooth Length to Delivery Method and Dosage Level
 
-```{r tooth-length-relative-to-supplement-type-and-dosage-level, echo = TRUE}
+```{r tooth-length-relative-to-delivery-method-and-dosage-level, echo = TRUE}
 tg <- ToothGrowth
 levels(tg$supp) <- c("Orange Juice", "Ascorbic Acid")
 gLenSuppDose <- ggplot(data = tg, aes(x = supp, y = len)) + 
     geom_boxplot(aes(fill = supp)) +
     facet_wrap(~ dose) +
-    xlab("Supplement Type") +
+    xlab("Delivery Method") +
     ylab("Tooth Length") +
     guides(fill=guide_legend(title="supp")) +
     theme(plot.title = element_text(size = 14, hjust = 0.5, vjust = 0.5),
@@ -149,25 +149,97 @@ gLenSuppDose <- ggplot(data = tg, aes(x = supp, y = len)) +
                                      hjust = 0.5,
                                      vjust = 0.5,
                                      margin = margin(b = 10))) +
-    ggtitle("Tooth Length as a Function of\nSupplement Type and Dosage Level")
+    ggtitle("Tooth Length as a Function of\nDelivery Method and Dosage Level")
 print(gLenSuppDose)
 ```
 
 **Observation**
 
 Looking at the above chart which shows tooth growth as a function of delivery
-method and dosage level, it appears that Orange Juice is more effective than
-Ascorbic Acid as the delivery method when the dosage level is 0.5 to 1.0 mg/day.
-The higher dosage level of 2.0 mg/day is more effective than the lower
-dosages, but both delivery methods are equally as effective.
+method and dosage level, it appears that orange juice is more effective than
+ascorbic acid as the delivery method when the dosage level is 0.5 to 1 mg/day.
+The higher dosage level of 2 mg/day is more effective than the lower
+dosages; however, both delivery methods are equally as effective.
 
-## Confidence Intervals
+## Inferential Statistics
 
-Confidence Interval test that the two supps are equal. Null hypothesis is that there is no difference in length which would imply that the 95% confidence interval should contain 0.
+Exploratory data analysis is helpful to study and visually interrogate data;
+however, the use of inferential statistics allows us to use techniques such as
+the confidence interval and/or hypothesis testing to more precisely draw
+conclusions about a population from which representative samples were taken.
 
+In this section, hypothesis testing will be employed to study the impact of
+delivery method (orange juice and ascorbic acid supplements) and dosage level
+on tooth growth. A p-value less than or greater than a significance level of 5%
+will be used as the threshold to reject or accept the null hypothesis.
 
-## Hypothesis Test
+### Hypothesis 1
 
+Hypothesis testing will be conducted to study the impact of delivery method on
+tooth growth, independent of dosage level. A t-test will be performed on the
+null hypothesis that the two delivery methods have no effect on
+tooth growth.
+
+```{r inferential-statistics-test-1, echo = TRUE}
+t1 <- t.test(len ~ supp, data = ToothGrowth, conf.level = 0.95)
+paste0("p-value = ", round(t1$p.value, 4))
+paste0("confidence interval = (", round(t1$conf.int[1], 4) , ", ", round(t1$conf.int[2], 4), ")")
+```
+
+The observed p-value `r round(t1$p.value, 4)` is greater than 0.05 and the
+95% confidence interval contains zero. This indicates weak evidence against the
+null hypothesis so we fail to reject the null hypothesis.
+
+### Hypothesis 2
+
+Hypothesis testing will be conducted to study the impact of delivery method on
+tooth growth for a single dosage level. A t-test will be performed on the null
+hypothesis that the two delivery methods at a dosage level of
+0.5 mg/day have no effect on tooth growth.
+
+```{r inferential-statistics-test-2, echo = TRUE}
+t2 <- t.test(len ~ supp, data = subset(ToothGrowth, dose == 0.5), conf.level = 0.95)
+paste0("p-value = ", round(t2$p.value, 4))
+paste0("confidence interval = (", round(t2$conf.int[1], 4) , ", ", round(t2$conf.int[2], 4), ")")
+```
+
+The observed p-value `r round(t2$p.value, 4)` is less than 0.05 and the
+95% confidence interval does not contain zero. This indicates strong evidence
+against the null hypothesis so the null hypothesis can be rejected.
+
+### Hypothesis 3
+
+Hypothesis testing will be conducted to study the impact of delivery method on
+tooth growth for a single dosage level. A t-test will be performed on the null
+hypothesis that the two delivery methods at a dosage level of 1 mg/day have no
+effect on tooth growth.
+
+```{r inferential-statistics-test-3, echo = TRUE}
+t3 <- t.test(len ~ supp, data = subset(ToothGrowth, dose == 1), conf.level = 0.95)
+paste0("p-value = ", round(t3$p.value, 4))
+paste0("confidence interval = (", round(t3$conf.int[1], 4) , ", ", round(t3$conf.int[2], 4), ")")
+```
+
+The observed p-value `r round(t3$p.value, 4)` is less than 0.05 and the
+95% confidence interval does not contain zero. This indicates strong evidence
+against the null hypothesis so the null hypothesis can be rejected.
+
+### Hypothesis 4
+
+Hypothesis testing will be conducted to study the impact of delivery method on
+tooth growth for a single dosage level. A t-test will be performed on the null
+hypothesis that the two delivery methods at a dosage level of 2 mg/day have no
+effect on tooth growth.
+
+```{r inferential-statistics-test-4, echo = TRUE}
+t4 <- t.test(len ~ supp, data = subset(ToothGrowth, dose == 2), conf.level = 0.95)
+paste0("p-value = ", round(t4$p.value, 4))
+paste0("confidence interval = (", round(t4$conf.int[1], 4) , ", ", round(t4$conf.int[2], 4), ")")
+```
+
+The observed p-value `r round(t4$p.value, 4)` is greater than 0.05 and the
+95% confidence interval contains zero. This indicates weak evidence against the
+null hypothesis so we fail to reject the null hypothesis.
 
 ## Conclusion
 
