--- a/tooth-growth-analysis.Rmd
+++ b/tooth-growth-analysis.Rmd
@@ -56,10 +56,6 @@ if (!require(ggplot2)) {
     install.packages("ggplot2", repos = "http://cran.us.r-project.org")
     library(ggplot2)
 }
-if (!require(dplyr, warn.conflicts = FALSE)) {
-    install.packages("dplyr", repos = "http://cran.us.r-project.org")
-    library(dplyr, warn.conflicts = FALSE)
-}
 ```
 
 Load ToothGrowth dataset.
@@ -249,19 +245,22 @@ tooth growth in guinea pigs.
 
 ### Assumptions
 
-* Tooth growth follows a normal distibution.
+* Tooth growth follows a normal distribution.
 
-* The two variables, dosage levels and delivery method, must be independent and
-  identicaly distributed.
+* The two variables, dosage levels and delivery method, are independent and
+  identically distributed.
 
 * No other confounding factors were included that would effect tooth growth.
 
 * The population was comprised of similar guinea pigs.
 
+* A p-value less than or greater than a significance level of 5% will be used as
+  the threshold to reject or accept the null hypothesis.
+
 ### Conclusions
 
 Based on exploratory data analysis and confirmed by hypothesis tests and
-associated confidence intervals, we can safely conclude that an increase in
+associated confidence intervals, we can safely infer that an increase in
 dosage levels of vitamin C increases tooth growth. However, when studying tooth
 growth as a function of both dosage level and delivery method, it is
 inconclusive whether or not the delivery method had any effect on tooth growth.
