--- a/exp-distrib-simulation.Rmd
+++ b/exp-distrib-simulation.Rmd
@@ -22,11 +22,17 @@ output:
     keep_md: no
 ---
 
-```{r setup, include = FALSE}
-knitr::opts_chunk$set(echo = TRUE, fig.path='figures/')
-```
+## Course Project
 
-## Overview
+**Statistical Inference Course Project**
+
+Peer-graded Assignment
+
+* This course project is available on GitHub
+
+    <a href="https://github.com/oraclejavanet/statistical-inference-course-project-1" target="_top">Statistical Inference Course Project</a>
+
+## Synopsis
 
 The Central Limit Theorem states that if you have a population with mean $\mu$
 and standard deviation $\sigma$ and take sufficiently large random samples from
@@ -38,6 +44,37 @@ This project explores the Central Limit Theorem using the exponential
 distribution in R. The theoretical normal distribution will be compared to the
 distribution of calculated means of samples from the exponential distribution.
 
+## Environment Setup
+
+```{r setup, include = FALSE}
+# set knitr options
+knitr::opts_chunk$set(echo = TRUE, fig.path='figures/')
+
+# clear global workspace (including hidden objects) for this session
+rm(list = ls(all.names = TRUE))
+
+# free up memory and display statistics on free memory
+gc()
+
+# disable scientific notation for numbers
+options(scipen = 1)
+```
+
+Load packages used in this analysis.
+
+```{r load-packages, echo = TRUE}
+if (!require(ggplot2)) {
+    install.packages("ggplot2")
+    library(ggplot2)
+}
+```
+
+Display session information.
+
+```{r display-session-info, echo = TRUE}
+sessionInfo()
+```
+
 ## Simulations
 
 Perform 1000 simulations, each with 40 samples of an exponential distribution.
@@ -48,12 +85,6 @@ To make the data reproducible, a seed will be set. Also, set the control
 parameters $\lambda = 0.2$ (the rate) and $n = 40$ (number of samples).
 
 ```{r exp-simulation, echo = TRUE}
-# load libraries
-if (!require(ggplot2)) {
-    install.packages("ggplot2", repos = "http://cran.us.r-project.org")
-    library(ggplot2)
-}
-
 # set seed for reproducability
 set.seed(062000)
 
